<resources>
    <string name="app_name">WorldSocialMap</string>
    <!--<string name="google_app_id">1:550180228122:android:8a8e82afd44f3fe0</string>-->
    <string name="login">Welcome to the World Social Map</string>
    <string name="logout">LOGOUT</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="goodle_app_id">1:550180228122:android:8a8e82afd44f3fe0</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="surename">Surename</string>
    <string name="visited_country_button">Add visited place</string>
    <string name="want_to_visit_button">Add a place I want to visit</string>
    <string name="want_place">What place do you want to visit?</string>
    <string name="visited_place">What place have you visited?</string>
    <string name="upload_photo">Here you can upload photo of the place you have visited</string>
    <string name="add_photo">Add photo</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="place">Place</string>
    <string name="comment">Comment</string>
    <string name="button_text">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
