<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mint"
    tools:context="com.map.social.mariia.worldsocialmap.VisitedForm">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:fontFamily="cursive"
            android:text="@string/visited_place"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <Button
                style="@style/add_photo_style"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/add_photo_btn"
                android:text="@string/add_photo"/>

            <EditText
                android:id="@+id/country_visited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/country" />

            <EditText
                android:id="@+id/city_visited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/city" />

            <EditText
                android:id="@+id/place_visited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/place" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/comment"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:lines="8"
                android:maxLines="10"
                android:minLines="6"
                android:hint="@string/comment" />

            <Button
                style="@style/button_style"
                android:id="@+id/visited_btn"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_text" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
