<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mint"
    tools:context="com.map.social.mariia.worldsocialmap.WantForm">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="cursive"
            android:text="@string/want_place"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/want_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/country" />

        <EditText
            android:id="@+id/want_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/city" />

        <EditText
            android:id="@+id/want_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/place" />

        <Button
            style="@style/button_style"
            android:id="@+id/want_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text" />
    </LinearLayout>
</FrameLayout>
