<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mint">
    <android.support.v7.widget.CardView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cv"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:id="@+id/label_visited_city"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/visited_city"
                android:layout_toRightOf="@+id/label_visited_city"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/visited_city"
                android:text="@string/place"
                android:id="@+id/label_visited_place"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/visited_city"
                android:id="@+id/visited_place"
                android:layout_toRightOf="@+id/label_visited_place"
                android:layout_marginLeft="10dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/visited_place"
                android:id="@+id/visited_place_photo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/visited_place_photo"
                android:text="@string/comment"
                android:id="@+id/label_comment"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/visited_place_photo"
                android:id="@+id/visited_place_comment"
                android:layout_toRightOf="@+id/label_comment"
                android:layout_marginLeft="10dp"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>