<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.map.social.mariia.worldsocialmap.UserPage">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/mint"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="224dp"
                    android:background="@drawable/panama_city" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:src="@drawable/symbol"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="cursive"
                    android:text="@string/email"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/email_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/email" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="cursive"
                    android:text="@string/name"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/name_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/name" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/surename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="cursive"
                    android:text="@string/surename"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/surename_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/surename" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:visibility="visible">

                <Button
                    android:id="@+id/visited_place_btn"
                    style="@style/button_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:paddingLeft="45dp"
                    android:paddingRight="45dp"
                    android:text="@string/visited_country_button"
                    android:textColor="@color/colorPrimaryDark" />

                <Button
                    android:id="@+id/want_to_visit_btn"
                    style="@style/button_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/visited_place_btn"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/want_to_visit_button"
                    android:textColor="@color/colorPrimaryDark" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/logout_btn"
                    style="@style/button_style"
                    android:layout_below="@+id/want_to_visit_btn"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/logout"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/colorPrimaryDark"
                    />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
